# boombox

./: .gitignore  .gitmodules  CMakeLists.txt  flash.sh  main.c
hardware/: #auto_saved_files#  _autosave-boombox.kicad_pcb  _autosave-boombox.kicad_sch  audio.kicad_sch  audio.kicad_sch-bak  boombox.kicad_pcb  boombox.kicad_prl  boombox.kicad_pro  boombox.kicad_sch  boombox.kicad_sch-bak  boombox.kicad_sym  fp-lib-table  power.kicad_sch  sym-lib-table  ~boombox.kicad_sch.lck
hardware/boombox.pretty/: 1990054.kicad_mod  691137710002.kicad_mod  CUI_MSD-4-A.kicad_mod  CUI_UJ20-C-H-C-4-SMT-TR.kicad_mod  Degson 3 Pin.kicad_mod  Degson 3 Pin_Audio.kicad_mod  EBAA02C.kicad_mod  EBAA02C_Audio.kicad_mod  MAX98365.kicad_mod  PHOENIX_1989926.kicad_mod  PTS645S_SMTR92_CNK.kicad_mod  RPI_PICO_TH.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  SOIC8-N_MC_MCH.kicad_mod  SW_TS02-66-70-BK-160-LCR-D.kicad_mod  TL2202OAYA.kicad_mod  TestPoint_Pad_2.0x2.0mm.kicad_mod  XTAL_ECS-.327-6-13X.kicad_mod
hardware/models/: SOIC8-N_MC_MCH.stl  TL2202OAYA.stp
src/: audio_i2s.pio  blink.c  hw_config.c  main.c
